# tap-outbrain

./: pyproject.toml  setup.py
tap_outbrain/: __init__.py  schemas.py
